--- a/HPFoods_API/.gitignore
+++ b/HPFoods_API/.gitignore
@@ -1,7 +1,20 @@
 # JetBrains Rider
 .idea/
 *.sln.iml
-.DS_Store
+*.idea/
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+.idea/**/contentModel.xml
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
 
 # User-specific stuff
 .idea/**/workspace.xml
